[package]
name = "symbolapi"
version = "0.0.1"
authors = ["Robert Helmer <rhelmer@rhelmer.org>"]

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.breakpad-symbols]
git = "https://github.com/rhelmer/breakpad-symbols.git"

[dependencies]
toml = "0.1"
rustc-serialize = "0.3.16"
log = "0.3.4"
log4rs = "0.3.3"
